--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moment3_nosql_steg2",
   "version": "1.0.0",
-  "main": "src/index.html",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
